--- a/fe/basic/style.css
+++ b/fe/basic/style.css
@@ -1,3 +1,18 @@
-body {
-	background-color:gray;
+body { background-color: lightgray; }
+
+/* “.”开头表示所有class为center的标签均被该选择器选中 */
+.center { text-align: center; }
+/* 只有标签为p，且class为center的标签被该选择器选中 */
+p.italic{ font-style: italic; }
+
+/* id为red的标签被该选择器选中 */
+#red { color: red; font-weight: bold;
+}
+
+/* 将盒子模型着色显示 */
+.box_model {
+	width: 100px;	/* box的宽度 */
+	margin: 0px;	/* margin无法显示 */
+	border: 5px solid green;
+	padding: 0px;	/* padding无法显示 */
 }
