--- a/fe/homepage/style.css
+++ b/fe/homepage/style.css
@@ -1,60 +1,45 @@
-/* 头部标题 */
-.header h1 {
-	text-align: center;	/* 文字居中 */
+/* 头部 */
+header {
+	text-align:center;
 }
 
-/* 导航栏 */
-.navigation {
-	overflow: hidden;	/* 无滚动条，内容裁剪 */
-	background-color: #333;	/* 背景颜色 */
+/* 导航 */
+nav {
+	overflow:hidden;
+	background-color:#333;
+}
+nav a {
+	float:left;
+	display:block;
+	color:#f2f2f2;
+	text-align:center;
+	padding:14px 16px;
+	text-decoration:none;
+}
+nav a:hover {
+	background-color:#ddd;
+	color:black;
 }
 
-/* 导航栏链接 */
-.navigation a {
-	float: left;	/* 设置浮动 */
-	display: block;	/* 设置框类型 */
-	color: #f2f2f2;	/* 文字颜色 */
-	text-align: center;	/* 对齐方式 */
-	padding: 14px 16px;	/* 填充宽度 */
-	text-decoration: none;	/* 文本装饰 */
-}
-
-/* 导航栏链接链接 - 修改颜色 */
-.navigation a:hover {
-	background-color: #ddd;
-	color: black;
-}
-
-/* content后清除浮动 */
-.content {
+/* 内容 */
+#content {
+	display:-webkit-flex;
+    display:flex;
 	border:solid;
 }
-.content:after {
-  content: "";
-  display: table;
-  clear: both;
+#content aside {
+	width:20%;
+	border:solid;
+	border-width:1px;
+	background-color:lightgray;
+}
+#content article {
+	width:80%;
+	border:solid;
+	border-width:1px;
 }
 
-/* 内容分列 */
-.column {
-	float: left;
-}
-.column.left {
-	width: 10%;
-	text-align: center;
-	background-color: lightgray;
-}
-.column.center {
-	width: 80%;
-	text-align: center;
-}
-.column.right {
-	width: 10%;
-	text-align: center;
-	background-color: lightgray;
-}
-
-/* 页脚 */
-.footer {
-	text-align: center;	/* 文字居中 */
+/* 脚注 */
+footer {
+	text-align:center;
 }
