--- a/golang/template/demo.tmpl
+++ b/golang/template/demo.tmpl
@@ -64,7 +64,7 @@ ge: 用法：ge arg1 arg2
 
 12. 函数调用
 {{inc 1}}
-{{asc 65}}
+{{65 | asc}}
 {{call .VarFunc 1}}
 
 参考文档：https://www.cnblogs.com/CxAgoni/p/17962581
