--- a/golang/template/demo.tmpl
+++ b/golang/template/demo.tmpl
@@ -15,6 +15,7 @@
 5.2 多次定义的变量：{{$len = (len "hello world")}} {{print $len}}
 5.3 特殊的顶级域全局变量：{{print $}}	{{/* “$”表示顶级作用域的全局变量 */}}
 5.4 特殊的当前域全局变量：{{print .}}	{{/* “.”表示当前作用域的全局变量 */}}
+5.5 整体赋值：{{$root := .}} {{print $root.VarStr}}
 
 6. 条件语句
 {{if gt 2 1}} if条件命中 {{end}}
